--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
